small fix for overflowing tab-switcher

--- a/src/components/tab_switcher/tab_switcher.scss
+++ b/src/components/tab_switcher/tab_switcher.scss
@@ -9,7 +9,6 @@
   .tabs {
     display: flex;
     position: relative;
-    justify-content: center;
     width: 100%;
     overflow-y: hidden;
     overflow-x: auto;
